platform/jupyterhub-config/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyterhub-hub-prometheus
  namespace: jupyterhub
spec:
  podSelector:
    matchLabels:
      app: jupyterhub
      component: hub
      release: jupyterhub

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              prometheus: kube-prometheus-stack-prometheus
      ports:
        - protocol: TCP
          port: 8081
